@@ -1,3 +1,3 @@
-EBUILD aufs2-99999999.ebuild 3938 RMD160 3ff696b2cff626424c2c1156fcd9eccda0412323 SHA1 f43351581df6c54c29a7b198be067737aac00e19 SHA256 2ff31c9e5af6ecf25eadf186935a45e4dba0b4f25767c28f5840b53fdb564a57
-MISC ChangeLog 1030 RMD160 1fc03caa73f947dcd17af6c2711e737d9336742c SHA1 8dc27c90c6533df277c363dd789816c6b2afc56c SHA256 4e737d7be59f7d1dbf29405f2f4e5b8aca06838fef25f0fd3acadfbcfb547b56
+EBUILD aufs2-99999999.ebuild 3908 RMD160 a5209236317c45509cba809f02296e651e2fd579 SHA1 4bda361d992d9b0fd326acf5e1d660c94110fd73 SHA256 3388be69e6208018f6fef208d44fa42f016fe5b8a6ab13c4aca509220e9ee0d9
+MISC ChangeLog 1137 RMD160 9bcc019bfc741067d64aee92bc19476c2c55c86f SHA1 7b7281d903a6951b79cee6ee2b2f60b97a4f3121 SHA256 443d29f4384c6585a8931f9e4be722920940630f7d91fd137b6cbd6d74940932
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
