@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  23 Aug 2010; Martin Väth <martin@mvath.de>
+  Fix treatment of EGIT_PRUNE. Bump EAPI.
+
   17 Mar 2010; Martin Väth <martin@mvath.de>
   Update git dependency according to package move.
 
